syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "storage/telemetry.proto";
import "api/v1/empty.proto";

package v1;

service TelemetryService {
    rpc GetTelemetryConfiguration (Empty) returns (storage.TelemetryConfiguration) {
        option (google.api.http) = {
            get: "/v1/telemetry/configure"
        };
    }

    rpc ConfigureTelemetry (storage.TelemetryConfiguration) returns (storage.TelemetryConfiguration) {
        option (google.api.http) = {
            put: "/v1/telemetry/configure"
            body: "*"
        };
    }
}
