syntax = "proto3";

option go_package = "central";

import "google/protobuf/empty.proto";
import "storage/cluster.proto";

package central;

message UpgradeCheckInFromUpgraderRequest {
    string  upgrade_process_id        = 1;
    string  current_workflow          = 2;
    string  last_executed_stage       = 3;

    // The error from the last executed stage, if any.
    // If this is empty, that implies that the last stage
    // was succesfully executed.
    string  last_executed_stage_error = 4;
}

message UpgradeCheckInFromUpgraderResponse {
    string workflow_to_execute = 1;
}

service SensorUpgradeControlService {
    rpc UpgradeCheckInFromUpgrader(UpgradeCheckInFromUpgraderRequest) returns (UpgradeCheckInFromUpgraderResponse);
}
