syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";

package storage;

message LogImbue {
  string                    id        = 1;  // @gotags: sql:"pk"
  google.protobuf.Timestamp timestamp = 2;
  bytes                     log       = 3;
}
